♻️ refactor: update file paths and database connection details

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_CONNECTION=mongodb+srv://buseduran:RsdVNR8IzLimEoy8@cluster0.o4g6m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_CONNECTION=mongodb+srv://buseduran:RsdVNR8IzLimEoy8@cluster0.o4g6m.mongodb.net/golang_db?retryWrites=true&w=majority&appName=Cluster0
