--- a/goNote.Client/client/Dockerfile.client
+++ b/goNote.Client/client/Dockerfile.client
@@ -1,5 +1,5 @@
 # Node.js base image kullanıyoruz
-FROM node:20-alpine
+FROM node:20-alpine AS build
 
 # Çalışma dizini ayarla
 WORKDIR /app
@@ -14,9 +14,9 @@ COPY . .
 # React uygulamasını build et
 RUN npm run build
 
-# Nginx kullanarak servisi başlat
+# Nginx aşaması
 FROM nginx:alpine
-COPY --from=0 /app/dist /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html  # `dist` yerine `build` klasörünü kullan
 
 # Nginx'in çalışacağı port
 EXPOSE 80
