--- a/goNote.Api/Dockerfile.api
+++ b/goNote.Api/Dockerfile.api
@@ -1,21 +1,16 @@
-# Base image for Go
+# Go için base image
 FROM golang:1.23.2-alpine
-
-# Set the working directory
+# Çalışma dizinini ayarla
 WORKDIR /app
-
-# Copy go.mod and go.sum files and download dependencies
+# go.mod ve go.sum dosyalarını kopyala
 COPY go.mod go.sum ./
+# Bağımlılıkları indir
 RUN go mod download
-
-# Copy the remaining application files
+# Kalan dosyaları kopyala
 COPY . .
-
-# Build the Go application and output the binary as 'app'
-RUN go build -o app .
-
-# Expose the port that the application will run on
-EXPOSE 5000
-
-# Run the application
-CMD ["./app"]
+# Uygulamayı derle
+RUN go build -o main .
+# Uygulamanın çalışacağı port
+EXPOSE 8080
+# Uygulamayı başlat
+CMD ["./main"]
