--- a/goNote.Api/Dockerfile.api
+++ b/goNote.Api/Dockerfile.api
@@ -8,9 +8,11 @@ COPY go.mod go.sum ./
 RUN go mod download
 # Kalan dosyaları kopyala
 COPY . .
-# Uygulamayı derle
-RUN go build -o main .
+
+RUN ls -la /app
+
+RUN go build -o out .
 # Uygulamanın çalışacağı port
-EXPOSE 8080
-# Uygulamayı başlat
-CMD ["./main"]
+EXPOSE 5000
+CMD ["./out"]
+
